patched movement, added gold, and tech points, classes for units and buildings, and fixed cards so they will go down when you click on them again

--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ body{
     height:100%;
     width:100%;
 }
+#canvas2 {
+    position:absolute;
+    background: none;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+}
