--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body{
 
 #canvas1 {
     position:absolute;
-    background: none;
-    top:0;
-    left:0;
-    height:100%;
-    width:100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%; 
 }
 #canvas2 {
     position:absolute;
