--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     max-width: 100%;
     max-height: 100%; 
 }
-#canvas2 {
+.canvas2 {
     position:absolute;
     background: none;
     top:0;
